[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook2md"
version = "0.1.0"
authors = [
  { name = "Tiago Silva" }
]
description = "A utility for managing and organizing notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyperclip",
  "python-dotenv",
  "nbformat",
  "nbconvert"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]1

[project.scripts]
notebook2md = "notebook2md.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook2md"]
