[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook2md"
version = "0.1.0"
authors = [
  { name = "Tiago Silva" }
]
description = "Convert Jupyter Notebooks to Markdown with cell delimiters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyperclip",
  "python-dotenv>=1.2.2",
  "nbformat",
  "nbconvert>=7.17.1",
  "pygments>=2.20.0",
  "tornado>=6.5.5"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
notebook2md = "notebook2md.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook2md"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
